[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_file = LICENSE.md

[pycodestyle]
max-line-length=79
ignore = E203,W503

[options.extras_require]
docs =
    sphinx != 1.3.1
    sphinx_rtd_theme==0.5.*
    sphinx-multiversion >= 0.2.3
    sphinx-gallery >= 0.7
    spinxcontrib-svg2pdfconverter
    presets
tests =
    pytest-mpl
    pytest-cov
    pytest